# Auro

./: assessment_cmakelists.txt  assessment_package_xml.txt  assessment_task_manager.py  assessment_world_config.txt  assessment_world_launch.py  auro_readme.md  item_detector_node.py
solution/: package.xml  setup.py
solution/launch/: solution_launch.py
solution/solution/: robot_controller.py
tf_transformations/: LICENSE  README.md  package.xml  setup.cfg  setup.py
tf_transformations/test/: test_transformations.py
tf_transformations/tf_transformations/: __init__.py
